/county/increase_name_column.sql
/city/increase_name_column.sql
/state_population_2020/create.sql
/county_population_2020/create.sql
/city_population_2020/create.sql
/state_population_2020_by_race_ethnicity/create.sql
/county_population_2020_by_race_ethnicity/create.sql
/city_population_2020_by_race_ethnicity/create.sql
/race_ethnicity/increase_name_column_size.sql
/race_ethnicity/populate.sql
/state_vaccinations/add_column_distributed.sql
/state_vaccinations/add_column_administered.sql
/state_vaccinations/add_column_administered_one_dose.sql
/state_vaccinations/add_column_administered_two_dose.sql
/state_vaccinations/drop_column_vaccinations.sql
/fatal_police_shootings/lowercase_age_column.sql
/fatal_police_shootings/lowercase_armed_column.sql
/fatal_police_shootings/lowercase_gender_column.sql
/race_ethnicity/populate_hispanic_latino_unknown.sql
/fatal_police_shootings/add_column_public_id.sql
/race_ethnicity/update_unknown_value_typo.sql
/fatal_police_shootings/increase_column_name.sql
/apha_racism_declarations/create.sql
/covid_behind_bars/create.sql
/covid_behind_bars/default_resident_active_staff_active_columns.sql
/covid_behind_bars/increase_integer_column_ranges.sql
/osha_complaints/create.sql
/osha_complaints/add_upa_number_column.sql
/twitter_account/create.sql
/twitter_terms/create.sql
/tweets/create.sql
/twitter_terms_frequency/create.sql
/twitter_account_type/create.sql
/twitter_account/add_column_twitter_account_type_id.sql
/twitter_account/add_foreign_key_to_twitter_account_type.sql
/twitter_account_state/create.sql
/twitter_terms_frequency/drop_foreign_key_to_twitter_account.sql
/twitter_terms_frequency/drop_column_twitter_account_id.sql
/twitter_terms_frequency/add_column_tweets_id.sql
/twitter_terms_frequency/add_foreign_key_to_tweets.sql
/twitter_terms_frequency/drop_foreign_key_to_calendar_date.sql
/twitter_terms_frequency/drop_column_calendar_date_id.sql
/wastewater_metrics/create.sql
/wastewater_metrics/increase_percentile_change_column.sql