@@ -1,0 +1,2 @@
+-- Drop county_id foreign key column
+ALTER TABLE city DROP COLUMN county_id;
